Fixed dropdown z-index

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -430,3 +430,7 @@ button:not(:-moz-focusring):focus > .menu__btn-title {
     max-width: 100%;
   }
 }
+
+li.menu__dropdown {
+  z-index: 100;
+}
